syntax = "proto3";

import "pb/proof.proto";

enum Axis {
    Row = 0;
    Col = 1;
}

enum SampleType {
    Data = 0;
    Parity = 1;
}

message SampleID{
    bytes data_root = 1;
    bytes dah_root = 2;
    uint32 index = 3;
    Axis axis = 4;
}

message Sample {
    SampleID id = 1;

    SampleType type = 2;
    bytes share = 3;
    proof.pb.Proof proof = 4;
}
